--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <!--amount of honey-->
           <h1 class="header" id="score" style="color: #fda917">0 honey</h1>
           <!--beehive / button-->
-          <img onclick="makeHoney()" src="assets/img/beehive.png" class="beehive">
+          <img onclick="makeHoney()" src="./assets/img/bee.png" class="beehive">
           <!--honey per second-->
           <h2 id="perSecond">0/s</h2>
 
@@ -32,7 +32,7 @@
           <div class="row justify-content-center">
             <div class="bee-shop col-md-3">
               <h5 id="bee-amount" style="color:#050505">0</h5>
-              <img src="/assets/img/bee.png" onclick="buy(ba1, bc1, bv1, gameData.bees, gameData.beeprice)"/>
+              <img src="./assets/img/bee.png" onclick="buy(ba1, bc1, bv1, gameData.bees, gameData.beeprice)"/>
 
               <h5 id="bee-cost" style="color:#fda917">75</h5>
 
@@ -42,7 +42,7 @@
   
             <div class="super-shop col-md-3">
               <h5 id="super-amount" style="color:#050505">0</h5>
-              <img src="/assets/img/superbee.png" onclick="buy(ba2, bc2, bv2, gameData.superbees, gameData.superbeeprice)"/>
+              <img src="./assets/img/superbee.png" onclick="buy(ba2, bc2, bv2, gameData.superbees, gameData.superbeeprice)"/>
               <h5 id="super-cost" style="color:#fda917">1000</h5>
 
               <!--superbee's honey per second-->
@@ -51,7 +51,7 @@
             
             <div class="mega-shop col-md-3">
               <h5 id="mega-amount" style="color:#050505">0</h5>
-              <img src="/assets/img/megabee.png"  onclick="buy(ba3, bc3, bv3, gameData.megabees, gameData.megabeeprice)"/>
+              <img src="./assets/img/megabee.png"  onclick="buy(ba3, bc3, bv3, gameData.megabees, gameData.megabeeprice)"/>
               <h5 id="mega-cost" style="color:#fda917">12500</h5>
 
               <!--megabee's honey per second-->
