--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <!--amount of honey-->
           <h1 class="header" id="score" style="color: #fda917">0 honey</h1>
           <!--beehive / button-->
-          <img onclick="makeHoney()" src="./assets/img/bee.png" class="beehive">
+          <img onclick="makeHoney()" src="./assets/img/beehive.png" class="beehive">
           <!--honey per second-->
           <h2 id="perSecond">0/s</h2>
 
@@ -39,7 +39,7 @@
               <!--bee's honey per second-->
               <h7 id="beevalue">0</h7>
             </div>
-  
+
             <div class="super-shop col-md-3">
               <h5 id="super-amount" style="color:#050505">0</h5>
               <img src="./assets/img/superbee.png" onclick="buy(ba2, bc2, bv2, gameData.superbees, gameData.superbeeprice)"/>
@@ -60,7 +60,7 @@
 
             <div class="uber-shop col-md-3">
               <h5 id="uber-amount" style="color:#050505">0</h5>
-              <img src="/assets/img/ultrabee.png" onclick="buy(ba4, bc4, bv4, gameData.uberbees, gameData.uberbeeprice)"/>
+              <img src="./assets/img/ultrabee.png" onclick="buy(ba4, bc4, bv4, gameData.uberbees, gameData.uberbeeprice)"/>
               <h5 id="uber-cost" style="color:#fda917">750000</h5>
 
               <!--ultrabee's honey per second-->
